--- a/src/main/webapp/WEB-INF/templates/mainTemplate.xhtml
+++ b/src/main/webapp/WEB-INF/templates/mainTemplate.xhtml
@@ -1,47 +1,61 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:c="http://java.sun.com/jsp/jstl/core"
-      xmlns:h="http://java.sun.com/jsf/html">
-    <head>
-        <title>StealingBank</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <link href="#{request.contextPath}/resources/css/style.css" rel="stylesheet" type="text/css" />
-    </head>
-    <body>
-    	<div id="header">
-            <div id="header-content" class="content">
-				<div id="title"><img src="#{request.contextPath}/resources/img/logo.png" width="600" height="128"/></div>
-				<div id="userData">
-					<c:if test="#{springSecurityContextUtilBean.isUserLoggedIn()}">
-						<form id="logoutForm" action="${request.contextPath}/app/logout" method="post">
-							#{springSecurityContextUtilBean.getLoggedOnUserNameAndSurname()}
-							<a href="#" title="Wyloguj się" onclick="document.getElementById('logoutForm').submit();">
-								<img id="logout-icon" src="#{request.contextPath}/resources/img/exit.png"/>
-							</a>
-							<input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"/>
-						</form>
-					</c:if>
-				</div>
-            </div>
-        </div>
-        
-        <div id="pageSeparator" />
+	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:c="http://java.sun.com/jsp/jstl/core"
+	xmlns:h="http://java.sun.com/jsf/html">
 
-        <div id="page">
-            <div class="content">
-            	<c:if test="#{springSecurityContextUtilBean.isUserLoggedIn()}">
-	            	<ul id="mainMenu">
-						<li><a href="#">Stronga główna</a></li>
-						<li><a href="#">Menu 1</a></li>
-						<li><a href="#">Menu 2</a></li>
-						<li><a href="#">Menu 3</a></li>
-						<li><a href="#">Menu 4</a></li>
-					</ul>
+<head>
+<title>StealingBank</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<link href="#{request.contextPath}/resources/css/style.css"
+	rel="stylesheet" type="text/css" />
+</head>
+<body>
+	<div id="header">
+		<div id="header-content" class="content">
+			<div id="title">
+				<img src="#{request.contextPath}/resources/img/logo.png" width="600"
+					height="128" />
+			</div>
+			<div id="userData">
+				<c:if test="#{springSecurityContextUtilBean.isUserLoggedIn()}">
+					<form id="logoutForm" action="${request.contextPath}/app/logout"
+						method="post">
+						#{springSecurityContextUtilBean.getLoggedOnUserNameAndSurname()} <a
+							href="#" title="Wyloguj się"
+							onclick="document.getElementById('logoutForm').submit();"> <img
+							id="logout-icon"
+							src="#{request.contextPath}/resources/img/exit.png" />
+						</a> <input type="hidden" name="${_csrf.parameterName}"
+							value="${_csrf.token}" />
+					</form>
 				</c:if>
-                <div id="pageContent">
-                    <ui:insert name="pageContent"/>
-                </div>
-            </div>
-        </div>
-    </body>
+			</div>
+		</div>
+	</div>
+
+	<div id="pageSeparator" />
+
+	<div id="page">
+		<div class="content">
+			<c:if test="#{springSecurityContextUtilBean.isUserLoggedIn()}">
+				<ol class="mainMenu">
+				    <li><a href="#">Stronga główna</a></li>
+					<li><a href="#">Transakcje</a>
+						<ul>
+							<li><a href="${request.contextPath}/app/moneyTransfer">Przelew</a></li>
+							<li><a href="${request.contextPath}/app/orderToPay">Polecenie zapłaty</a></li>
+							<li><a href="#">Inna transakcja</a></li>
+							<li><a href="#">link - 4</a></li>
+							<li><a href="#">link - 5</a></li>
+						</ul></li>
+					<li><a href="#">Menu 2</a></li>
+				</ol>
+			</c:if>
+			<div id="pageContent">
+				<ui:insert name="pageContent" />
+			</div>
+		</div>
+	</div>
+</body>
 </html>
