--- a/src/main/webapp/WEB-INF/templates/mainTemplate.xhtml
+++ b/src/main/webapp/WEB-INF/templates/mainTemplate.xhtml
@@ -4,13 +4,12 @@
 	xmlns:c="http://java.sun.com/jsp/jstl/core"
 	xmlns:h="http://java.sun.com/jsf/html">
 
-<head>
-<title>StealingBank</title>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<link href="#{request.contextPath}/resources/css/style.css"
-	rel="stylesheet" type="text/css" />
-</head>
-<body>
+<h:head>
+    <title>StealingBank</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link href="#{request.contextPath}/resources/css/style.css" rel="stylesheet" type="text/css" />
+</h:head>
+<h:body>
 	<div id="header">
 		<div id="header-content" class="content">
 			<div id="title">
@@ -57,5 +56,5 @@
 			</div>
 		</div>
 	</div>
-</body>
+</h:body>
 </html>
