--- a/src/main/webapp/WEB-INF/templates/mainTemplate.xhtml
+++ b/src/main/webapp/WEB-INF/templates/mainTemplate.xhtml
@@ -48,7 +48,12 @@
 							<li><a href="#">link - 4</a></li>
 							<li><a href="#">link - 5</a></li>
 						</ul></li>
-					<li><a href="#">Menu 2</a></li>
+					<li><a href="#">Lokaty</a>
+					<ul>
+							<li><a href="${request.contextPath}/app/createDeposit">Załóż lokatę</a></li>
+							<li><a href="#">COS jeszcze </a></li>
+						</ul></li>
+						<li><a href="#">Menu 3</a></li>
 				</ol>
 			</c:if>
 			<div id="pageContent">
