--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -49,6 +49,32 @@ body {
 	background-color: #F87171;
 }
 
+/* Kurtyna */ 
+#curtain {
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	left: 0;
+	top: 0;
+	background: rgba(51,51,51,0.5);
+	z-index: 99999;
+	display: none;
+}
+
+#curtainContent {
+	background-color: white; 
+	padding: 10px;
+	display: inline-block;
+	border-radius: 15px;
+}
+
+#curtainImage {
+	width: auto;
+	height: auto;
+	vertical-align: middle;
+	margin-right: 10px;
+}
+
 /* Kontener opakowujący jakąkolwiek zawartość na stronie. Wyznacza użytkowy obszar oraz wypośrodkowuje treść. */
 div.content {
 	width: 1000px;
