--- a/src/main/webapp/WEB-INF/templates/mainTemplate.xhtml
+++ b/src/main/webapp/WEB-INF/templates/mainTemplate.xhtml
@@ -15,8 +15,8 @@
 	<div id="header">
 		<div id="header-content" class="content">
 			<div id="title">
-				<img src="#{request.contextPath}/resources/img/logo.png" width="600"
-					height="128" />
+				<a href="#{request.contextPath}/app/mainWindow"><img src="#{request.contextPath}/resources/img/logo.png" width="600"
+					height="128" /></a>
 			</div>
 			<div id="userData">
 				<c:if test="#{springSecurityContextUtilBean.isUserLoggedIn()}">
