Zmienione encje dla lokat, dodany kontroler dla lokat

--- a/src/main/webapp/WEB-INF/templates/mainTemplate.xhtml
+++ b/src/main/webapp/WEB-INF/templates/mainTemplate.xhtml
@@ -50,8 +50,9 @@
 						</ul></li>
 					<li><a href="#">Lokaty</a>
 					<ul>
-							<li><a href="${request.contextPath}/app/createDeposit">Załóż lokatę</a></li>
-							<li><a href="#">COS jeszcze </a></li>
+							<li><a href="${request.contextPath}/app/deposit">Załóż lokatę</a></li>
+							<li><a href="#">Moje lokaty</a></li>
+							<li><a href="#">Kalkulator zysków</a></li>
 						</ul></li>
 						<li><a href="#">Menu 3</a></li>
 				</ol>
