--- a/src/main/webapp/WEB-INF/views/login.xhtml
+++ b/src/main/webapp/WEB-INF/views/login.xhtml
@@ -21,7 +21,7 @@
 				action="${request.contextPath}/app/j_spring_security_check"
 				method="post">
 				<p>
-					Użytkownik:: <br />
+					Użytkownik: <br />
 					<c:if test="${not empty param.login_error}">
 						<c:set var="username"
 							value="#{usernameExtractor.extractUsername(sessionScope.SPRING_SECURITY_LAST_EXCEPTION)}" />
