--- a/src/main/webapp/WEB-INF/templates/mainTemplate.xhtml
+++ b/src/main/webapp/WEB-INF/templates/mainTemplate.xhtml
@@ -3,6 +3,7 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:c="http://java.sun.com/jsp/jstl/core"
 	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:p="http://primefaces.org/ui">
 
 <h:head>
@@ -49,6 +50,10 @@
             			</p:submenu>
             			<p:submenu label="Lokaty">
             				<p:menuitem value="Załóż lokatę" url="/app/createDeposit"/>
+            			</p:submenu>
+            			<p:submenu label="Ubezpieczenia">
+            				<p:menuitem value="Przeglądaj oferte" url="/app/insurances"/>
+            				<p:menuitem value="Zgłoś roszczenie" url=""/>
             			</p:submenu>
             		</p:menubar>
            		</h:form>
