- nie pushuje hibernate.cfg.xml - trzeba tam dopisac odpowiednie DAO insuranceTypeDao

--- a/src/main/webapp/WEB-INF/templates/mainTemplate.xhtml
+++ b/src/main/webapp/WEB-INF/templates/mainTemplate.xhtml
@@ -52,7 +52,7 @@
             				<p:menuitem value="Załóż lokatę" url="/app/createDeposit"/>
             			</p:submenu>
             			<p:submenu label="Ubezpieczenia">
-            				<p:menuitem value="Przeglądaj oferte" url="/app/insurances"/>
+            				<p:menuitem value="Przeglądaj oferte" url="/app/insuranceMain"/>
             				<p:menuitem value="Zgłoś roszczenie" url=""/>
             			</p:submenu>
             		</p:menubar>
