--- a/src/main/webapp/WEB-INF/templates/mainTemplate.xhtml
+++ b/src/main/webapp/WEB-INF/templates/mainTemplate.xhtml
@@ -49,7 +49,7 @@
             				<p:menuitem value="Polecenie zapłaty" url="/app/orderToPay"/>
             			</p:submenu>
             			<p:submenu label="Lokaty">
-            				<p:menuitem value="Załóż lokatę" url="/app/createDeposit"/>
+            				<p:menuitem value="Załóż lokatę" url="/app/deposit"/>
             			</p:submenu>
             			<p:submenu label="Ubezpieczenia">
             				<p:menuitem value="Przeglądaj oferte" url="/app/insuranceMain"/>
