Dodana nowa funkcjonalność w module lokat

--- a/src/main/webapp/WEB-INF/templates/mainTemplate.xhtml
+++ b/src/main/webapp/WEB-INF/templates/mainTemplate.xhtml
@@ -50,6 +50,8 @@
             			</p:submenu>
             			<p:submenu label="Lokaty">
             				<p:menuitem value="Załóż lokatę" url="/app/deposit"/>
+            				<p:menuitem value="Moje lokaty" url="/app/myDeposits"/>
+            				<p:menuitem value="Kalulator lokat" url="/app/depositCalculator"/>
             			</p:submenu>
             		</p:menubar>
            		</h:form>
