--- a/src/main/webapp/WEB-INF/templates/mainTemplate.xhtml
+++ b/src/main/webapp/WEB-INF/templates/mainTemplate.xhtml
@@ -47,6 +47,7 @@
             			<p:submenu label="Transakcje">
             				<p:menuitem value="Przelew" url="/app/moneyTransfer"/>
             				<p:menuitem value="Polecenie zapłaty" url="/app/orderToPay"/>
+            				<p:menuitem value="Polecenia zapłaty" url="/app/orderToPayShow"/>
             			</p:submenu>
             			<p:submenu label="Lokaty">
             				<p:menuitem value="Załóż lokatę" url="/app/deposit"/>
