Tworzenie kart debetowych.

--- a/src/main/webapp/WEB-INF/templates/mainTemplate.xhtml
+++ b/src/main/webapp/WEB-INF/templates/mainTemplate.xhtml
@@ -55,6 +55,11 @@
             				<p:menuitem value="Przeglądaj oferte" url="/app/insuranceMain"/>
             				<p:menuitem value="Zgłoś roszczenie" url=""/>
             			</p:submenu>
+            			<p:submenu label="Karty">
+            				<p:menuitem value="Debetowe" url="/app/debitCardMain"/>
+            				<p:menuitem value="Kredytowe" url="/app/creditCardMain"/>
+            				<p:menuitem value="Obciążeniowe" url="/app/chargeCardMain"/>
+            			</p:submenu>
             		</p:menubar>
            		</h:form>
 			</c:if>
