polecenie zaplaty - poprawione

--- a/src/main/webapp/WEB-INF/templates/mainTemplate.xhtml
+++ b/src/main/webapp/WEB-INF/templates/mainTemplate.xhtml
@@ -46,8 +46,9 @@
             			<p:menuitem value="Pulpit" url="/app/mainWindow"/>
             			<p:submenu label="Transakcje">
             				<p:menuitem value="Przelew" url="/app/moneyTransfer"/>
-            				<p:menuitem value="Polecenie zapłaty" url="/app/orderToPay"/>
-            				<p:menuitem value="Polecenia zapłaty" url="/app/orderToPayShow"/>
+            				<p:menuitem value="Ustaw polecenie zapłaty" url="/app/orderToPay"/>
+            				<p:menuitem value="Zobacz polecenia zapłaty" url="/app/orderToPayShow"/>
+            				<p:menuitem value="Zobacz polecenia zapłaty" url="/app/orderToPayShow"/>
             			</p:submenu>
             			<p:submenu label="Lokaty">
             				<p:menuitem value="Załóż lokatę" url="/app/deposit"/>
