Zarządzanie współwłaściclami konta

--- a/src/main/webapp/resources/components/account.xhtml
+++ b/src/main/webapp/resources/components/account.xhtml
@@ -21,14 +21,11 @@
 						actionListener="#{controller.refreshAccountDetails(cc.attrs.accountStub, accountDetails)}">
 						<p:menuitem value="Dodaj wspówłaściciela" actionListener="#{data.setAccount(cc.attrs.accountStub)}"
 							action="addCoowner" onstart="showCurtain()" oncomplete="hideCurtain()"/>
-						<c:if test="#{cc.attrs.accountStub.coowners}">
-				        	<p:menuitem value="Zrezygnuj" action="resign" onstart="showCurtain()" oncomplete="hideCurtain()"
-				        		actionListener="#{data.setAccount(cc.attrs.accountStub)}"/>
-				        </c:if>
-				        <c:if test="#{not cc.attrs.accountStub.coowners}">
-				        	<p:menuitem value="Zamknij rachunek" action="delete" onstart="showCurtain()" oncomplete="hideCurtain()"
-				        		actionListener="#{data.setAccount(cc.attrs.accountStub)}"/>
-				        </c:if>>
+			        	<p:menuitem value="Zrezygnuj" onstart="showCurtain()" oncomplete="PF('confirm').show();hideCurtain()"
+			        		actionListener="#{data.setAccount(cc.attrs.accountStub)}" rendered="#{cc.attrs.accountStub.coowners}"
+			        		update="@form"/>
+			        	<p:menuitem value="Zamknij rachunek" action="delete" onstart="showCurtain()" oncomplete="hideCurtain()"
+			        		actionListener="#{data.setAccount(cc.attrs.accountStub)}" rendered="#{not cc.attrs.accountStub.coowners}"/>
 				    </p:splitButton>
 				</div>
 			</div>
