Insurances v1.0 (insert into wykonany przelew, still missing)

--- a/src/main/webapp/WEB-INF/templates/mainTemplate.xhtml
+++ b/src/main/webapp/WEB-INF/templates/mainTemplate.xhtml
@@ -54,7 +54,9 @@
             			</p:submenu>
             			<p:submenu label="Ubezpieczenia">
             				<p:menuitem value="Przeglądaj oferte" url="/app/insuranceMain"/>
-            				<p:menuitem value="Zgłoś roszczenie" url=""/>
+            				<p:menuitem value="Zgłoś roszczenie" url="/app/insuranceClaim"/>
+            				<p:menuitem value="Moje ubezpieczenia" url="/app/insuranceShow?success"/>
+            				<p:menuitem value="Moje roszczenia" url="/app/insuranceClaimShow?success"/>
             			</p:submenu>
             			<p:submenu label="Karty">
             				<p:menuitem value="Debetowe" url="/app/debitCardMain"/>
