kredyty (jeszcze nie działa..)

--- a/src/main/webapp/WEB-INF/templates/mainTemplate.xhtml
+++ b/src/main/webapp/WEB-INF/templates/mainTemplate.xhtml
@@ -64,6 +64,7 @@
             				<p:menuitem value="Kredytowe" url="/app/creditCardMain"/>
             				<p:menuitem value="Obciążeniowe" url="/app/chargeCardMain"/>
             			</p:submenu>
+            			<p:menuitem value="Kredyty" url="/app/credit"/>
             		</p:menubar>
            		</h:form>
 			</c:if>
