Tworzenie kart debetowych

--- a/src/main/webapp/WEB-INF/templates/mainTemplate.xhtml
+++ b/src/main/webapp/WEB-INF/templates/mainTemplate.xhtml
@@ -59,11 +59,7 @@
             				<p:menuitem value="Moje ubezpieczenia" url="/app/insuranceShow?success"/>
             				<p:menuitem value="Moje roszczenia" url="/app/insuranceClaimShow?success"/>
             			</p:submenu>
-            			<p:submenu label="Karty">
-            				<p:menuitem value="Debetowe" url="/app/debitCardMain"/>
-            				<p:menuitem value="Kredytowe" url="/app/creditCardMain"/>
-            				<p:menuitem value="Obciążeniowe" url="/app/chargeCardMain"/>
-            			</p:submenu>
+            			<p:menuitem value="Karty" url="/app/cardMain"/>
             			<p:submenu label="Kredyty">
 	            			<p:menuitem value="Moje kredyty" url="/app/credit"/>
 	            			<p:menuitem value="Symulacja" url="/app/simulation"/>
