--- a/src/main/webapp/WEB-INF/templates/mainTemplate.xhtml
+++ b/src/main/webapp/WEB-INF/templates/mainTemplate.xhtml
@@ -46,6 +46,7 @@
             			<p:menuitem value="Pulpit" url="/app/mainWindow"/>
             			<p:submenu label="Transakcje">
             				<p:menuitem value="Przelew" url="/app/moneyTransfer"/>
+            				<p:menuitem value="Przelew - historia" url="/app/moneyTransferShow"/>
             				<p:menuitem value="Ustaw pol. zapłaty" url="/app/orderToPay"/>
             				<p:menuitem value="Zobacz pol. zapłaty" url="/app/orderToPayShow"/>
             				<p:menuitem value="Użyj pol. zapłaty" url="/app/orderToPayUse"/>
